--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,13 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <selenium-chrome-driver.version>3.141.59</selenium-chrome-driver.version>
+        <!--<selenium-chrome-driver.version>3.141.59</selenium-chrome-driver.version>-->
+        <selenium-chrome-driver.version>4.0.0-beta-4</selenium-chrome-driver.version>
         <webdrivermanager.version>4.4.3</webdrivermanager.version>
-        <selenium-api.version>3.141.59</selenium-api.version>
-        <selenium-java.version>3.141.59</selenium-java.version>
+        <!--<selenium-api.version>3.141.59</selenium-api.version>-->
+        <!--<selenium-java.version>3.141.59</selenium-java.version>-->
+        <selenium-api.version>4.0.0-beta-4</selenium-api.version>
+        <selenium-java.version>4.0.0-beta-4</selenium-java.version>
         <testng.version>7.0.0</testng.version>
         <testng.version>7.0.0</testng.version>
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
